# proxy-checker

./: .gitignore  ARCHITECTURE.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_REVIEW.md  COMPREHENSIVE_PLAN.md  LICENSE  README.md  proxy_checker.py  pyproject.toml  requirements.txt
proxy_checker/: __init__.py  config.py  exceptions.py  main.py  models.py  validator.py  writers.py
proxy_checker/parsers/: proxy_parser.py
proxy_checker/utils/: http_client.py  rate_limiter.py
proxy_checker/validation/: validator.py
proxy_checker/validation/checkers/: anonymity_checker.py  geolocation_checker.py  protocol_checker.py
proxy_checker/writers/: base_writer.py  csv_writer.py  json_writer.py
tests/: conftest.py  test_parser.py
